Added Logos and Icon

--- a/public/404.html
+++ b/public/404.html
@@ -53,7 +53,7 @@
   <body>
     <main>
       <div class="error_box">
-        <img src="downsLogo.png" alt="Jami Downs Logo" />
+        <img src="jamiIcon.png" alt="Jami Downs Logo" />
         <h1>Page Does not Exsit!</h1>
         <p class="error">
           Something Went Wrong! Head back to the main page to try again!
