--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
       font-family: sans-serif;
     }
     main {
-      max-width: 1200px;
+      max-width: 800px;
       margin: 10px auto;
       text-align: center;
     }
@@ -24,7 +24,7 @@
 
     .button {
       border: 1px solid black;
-      background-color: #5a7e5d;
+      background-color: #395144;
       border-radius: 10px;
       padding: 1em;
       margin: 15px auto;
