--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./jamiFavicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta
+    name="description"
+    content="Jami Downs Portfolio site with projects related to Social Media, Email Marketing, writing, and photography."
+  />
+    <title>Jami Downs Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
